--- a/templates/reset_password_request.html
+++ b/templates/reset_password_request.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
         <div class="card">
             <div class="card-body">
-                <h2 class="card-title text-center mb-4">Login</h2>
+                <h2 class="card-title text-center mb-4">Reset Password</h2>
                 <form method="POST" novalidate>
                     {{ form.hidden_tag() }}
                     <div class="mb-3">
@@ -17,24 +17,12 @@
                             <div class="invalid-feedback d-block">{{ error }}</div>
                         {% endfor %}
                     </div>
-                    <div class="mb-3">
-                        {{ form.password.label(class="form-label") }}
-                        {{ form.password(class="form-control") }}
-                        {% for error in form.password.errors %}
-                            <div class="invalid-feedback d-block">{{ error }}</div>
-                        {% endfor %}
-                    </div>
-                    <div class="mb-3 form-check">
-                        {{ form.remember_me(class="form-check-input") }}
-                        {{ form.remember_me.label(class="form-check-label") }}
-                    </div>
                     <div class="d-grid">
                         {{ form.submit(class="btn btn-primary") }}
                     </div>
                 </form>
                 <div class="text-center mt-3">
-                    <p>New user? <a href="{{ url_for('register') }}">Register here</a></p>
-                    <p><a href="{{ url_for('reset_password_request') }}">Forgot your password?</a></p>
+                    <p>Remember your password? <a href="{{ url_for('login') }}">Login here</a></p>
                 </div>
             </div>
         </div>
