--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
                             <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('friend_suggestions') }}">Find Friends</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
                         </li>
                         <li class="nav-item">
